force-app/main/default/objects/Unit_Preference__c.object
<CustomObject>
    <description>Unit Preferences to store the study plan</description>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <description>Academic year from unit offerings</description>
        <formula>Unit_Offering__r.Academic_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to ACP record</description>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Unit Preferences</relationshipLabel>
        <relationshipName>Unit_Preferences_ACP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Unit Preferences</relationshipLabel>
        <relationshipName>Unit_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <description>Calendar name from Unit offerings</description>
        <formula>Unit_Offering__r.Calendar_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location__c field from Unit offerings</description>
        <formula>Unit_Offering__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Status__c</fullName>
        <description>Monash abroad status from Unit offering</description>
        <formula>Unit_Offering__r.MA_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Name__c</fullName>
        <description>Managing faculty name from Unit offerings</description>
        <formula>Unit_Offering__r.Managing_Faculty_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Faculty Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Number__c</fullName>
        <description>Preference number for the Unit preferences</description>
        <label>Preference Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <description>Number representing the semester</description>
        <label>Semester</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <formula>Unit_Offering__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Unit Title from Unit offerings</description>
        <formula>Unit_Offering__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UO_ID__c</fullName>
        <description>Unit offering Id</description>
        <formula>Unit_Offering__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Unit code from unit offering</description>
        <formula>Unit_Offering__r.Unit_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Offering__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Look up to Unit offering</description>
        <label>Unit Offering</label>
        <referenceTo>Unit_Offering__c</referenceTo>
        <relationshipLabel>Unit Preferences</relationshipLabel>
        <relationshipName>Unit_Preferences_UnitOffering</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Application_Course_Preference__c</columns>
        <columns>Unit_Code__c</columns>
        <columns>Title__c</columns>
        <columns>Location__c</columns>
        <columns>MA_Status__c</columns>
        <columns>Unit_Offering__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UP-{0}</displayFormat>
        <label>Unit Preference Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>